# docs/swagger.yaml
@@ -14,6 +14,19 @@ definitions:
       transactionType:
         type: string
     type: object
+  main.ForgotPasswordPayload:
+    properties:
+      email:
+        maxLength: 255
+        type: string
+    required:
+    - email
+    type: object
+  main.ForgotPasswordResponse:
+    properties:
+      token:
+        type: string
+    type: object
   main.GetUserByTokenResponse:
     properties:
       user:
@@ -53,6 +66,18 @@ definitions:
     - email
     - password
     - username
+    type: object
+  main.ResetPasswordPayload:
+    properties:
+      password:
+        maxLength: 72
+        minLength: 6
+        type: string
+      token:
+        type: string
+    required:
+    - password
+    - token
     type: object
   main.UpdateTransactionRequest:
     properties:
@@ -160,6 +185,37 @@ info:
   termsOfService: http://swagger.io/terms/
   title: FinTracker API
 paths:
+  /auth/forgot-password:
+    post:
+      consumes:
+      - application/json
+      description: Forgot password
+      parameters:
+      - description: Forgot password payload
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/main.ForgotPasswordPayload'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/main.ForgotPasswordResponse'
+        "400":
+          description: Bad Request
+          schema: {}
+        "404":
+          description: Not Found
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      summary: Forgot password
+      tags:
+      - auth
   /auth/login:
     post:
       consumes:
@@ -219,6 +275,37 @@ paths:
       summary: Register a new user
       tags:
       - auth
+  /auth/reset-password:
+    put:
+      consumes:
+      - application/json
+      description: Reset password using a valid token
+      parameters:
+      - description: Reset password payload
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/main.ResetPasswordPayload'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: password reset successfully
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema: {}
+        "404":
+          description: Not Found
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      summary: Reset password
+      tags:
+      - auth
   /auth/validate-invitation-token/{token}:
     get:
       consumes:
@@ -244,6 +331,33 @@ paths:
           description: Internal Server Error
           schema: {}
       summary: Validate user invitation token
+      tags:
+      - auth
+  /auth/validate-reset-token/{token}:
+    get:
+      consumes:
+      - application/json
+      description: Validate reset password token
+      parameters:
+      - description: Reset password token
+        in: path
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: valid token
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      summary: Validate reset password token
       tags:
       - auth
   /categories:
